syntax = "proto3";
import "mainPage/all_cource.proto"; // 课程视频
import "mainPage/all_hot_doc.proto"; // 热门文献
import "mainPage/all_last_news.proto"; // 最新资讯
import "mainPage/all_project.proto"; // 聚焦数据列表
import "mainPage/all_science.proto"; // 科技动态
import "mainPage/banner.proto"; // 广告
import "mainPage/doc_resource.proto"; // 资源下载
import "mainPage/guess_like.proto"; // 猜你喜欢
import "mainPage/hot_periodical.proto"; // 首页热门期刊列表
import "mainPage/hot_search_word.proto"; // 热搜词列表
import "mainPage/meeting_message.proto"; // 会议信息列表
package main;
option java_package = "com.wanfang.main";
option objc_class_prefix = "WFPR";

service HomePageService {
    //精品课程列表
    rpc GetAlCourse (AlCourseRequest) returns (AlCourseReply) {
    }
    //热门文献
    rpc GetAllHotDoc (HotDocRequest) returns (HotDocReply) {
    }
    //	最新资讯列表
    rpc GetAllLastNews (LastNewsRequest) returns (LastNewsReply) {
    }
    //专题聚焦数据列表
    rpc GetAllProject (ProjectRequest) returns (ProjectReply) {
    }
    //	科技动态
    rpc GetAllScience (AllScienceRequest) returns (AllScienceReply) {
    }
    //	广告页
    rpc GetAllBanner (AllBannerRequest) returns (AllBannerReply) {
    }
    //	资源下载地址，要判断阅读权限
    rpc GetDocResource (DocResourceRequest) returns (DocResourceReply) {
    }
    //猜你喜欢列表
    rpc GetAllGuessLike (GuessLikeRequest) returns (GuessLikeReply) {
    }
    //首页热门期刊列表
    rpc GetAllHotPeriodical (PeriodicalRequest) returns (PeriodicalReply) {
    }
    //热搜词列表
    rpc GetHotSearchWord (HotSearchWordRequest) returns (HotSearchWordReply) {
    }
    //会议信息列表
    rpc GetAllMeetingMessage (MeetingRequest) returns (MeetingReply) {
    }
}


