syntax = "proto3";

import "grpcCommon/msg_error.proto"; // 错误码

package read;
option java_multiple_files = true;
option java_package = "com.wanfang.read";
option objc_class_prefix = "WFPR";

message ReadRequest {
    string user_id = 1;
    string language = 2; // 语种
    string resource_type = 3; // 资源类型 eg：perio
    string source = 4; // 数据库来源
    string resource_title = 5; // 论文标题
    string resource_id = 6; // 论文id

    string login_token = 7;
}

message ReadResponse {
    string price = 1;
    string title = 2;
    string display_info = 3; // 描述信息
    string safe_transaction_string = 4; // 统一下单需要的参数
    bool already_buy = 5; // 已经购买过，不需要购买，直接可以在线阅读 trade_power后判断
    bool has_trade_power = 6; // 是否可以支付 先判断
    grpcCommon.GrpcError error = 7;
}

// 获取全文-请求
message GetResourceFileRequest {
    string resource_type = 1; // 资源类型 eg：perio
    string resource_id = 2; // 论文id
}

// 获取全文-响应
message GetResourceFileResponse {
    string file_name = 1;// 文件名称
    string content_type = 2; // 文件类型
    int64 total_byte_length = 3;// 总的字节数（若为0，则获取全文失败）
    int64 loading_byte_length = 4;// 加载的字节数
    bytes file_byte = 5;// 文件字节
}
